--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
     "@babel/preset-env": "^7.14.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^9.0.1",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "path": "^0.12.7",
+    "file-loader": "^6.2.0",   
+    "path": "^0.12.7"
+
+  },
+  "dependencies": {
+    "phaser": "^3.55.2",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "phaser": "^3.55.2"
+    "webpack-merge": "^5.8.0",
+    "html-webpack-plugin": "^5.3.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1"
   }
 }
